--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body::-webkit-scrollbar {
 }
 
 .main3 {
-	background-image: url("/assets/img/renders/bg-1.jpg");
+	background-image: url("./assets/img/renders/bg-1.jpg");
 	background-attachment: fixed;
 	background-position: center;
 	margin: 0;
